...
      const docRef = doc(FIREBASE_DB, "users", userId as string);
      await updateDoc(docRef, {
        role: role,
        especialidad: finalEspecialidad,
      });
      setIsLoading(false);
      Alert.alert("Éxito", "Usuario actualizado correctamente.");
      router.back();
    } catch (error) {
      console.error("Error al actualizar usuario: ", error);
      Alert.alert("Error", "No se pudo actualizar el usuario.");
      setIsLoading(false);
    }
...
