...
        }}
      />

      <Tabs.Screen
        name="informe" 
        options={{
          title: 'Informes', 
          headerTitle: 'Informes y Estadísticas',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="bar-chart-outline" size={size} color={color} />
          ),
        }}
      />
...
        }}
      />

      <Tabs.Screen
        name="mapa"
        options={{
          title: 'Mapa', 
          headerTitle: 'Mapa de Deficiencias',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="map-outline" size={size} color={color} />
          ),
        }}
      />
...
