...
          <Text
            style={[
              styles.filterButtonText,
              showResolved ? styles.textActive : styles.textInactive,
            ]}
          >
            {showResolved ? "Ocultar Resueltos" : "Mostrar Resueltos"}
          </Text>
        </TouchableOpacity>
      </View>

      {reportes.length === 0 && !isLoadingReports && (
        <View style={styles.overlay}>
...
