appId: com.jhon_steven_23.DeficienciasVialesJhonn
---
- launchApp:
    clearState: false

- extendedWaitUntil:
    visible: "Guardar Cambios"
    timeout: 5000

- assertVisible: "@"

- tapOn:
    index: 0
- eraseText
- inputText: "autoridad"
- hideKeyboard

- tapOn:
    index: 1
- eraseText
- inputText: "bache"
- hideKeyboard

- tapOn: "Guardar Cambios"

- extendedWaitUntil:
    visible: "Éxito"
    timeout: 5000

- tapOn: "OK"

- extendedWaitUntil:
    visible: "USUARIO"
    timeout: 5000

- tapOn:
    index: 0

- extendedWaitUntil:
    visible: "Guardar Cambios"
    timeout: 5000

# --- Segundo formulario ---
- tapOn:
    index: 0
- eraseText
- inputText: "usuario"
- hideKeyboard

- tapOn:
    index: 1
- eraseText
- inputText: "esto_debe_borrarse"
- hideKeyboard

- tapOn: "Guardar Cambios"

- extendedWaitUntil:
    visible: "Éxito"
    timeout: 5000

- tapOn: "OK"
