appId: com.jhon_steven_23.DeficienciasVialesJhonn
---
- launchApp:
    clearState: false

- tapOn: "Perfil"

- extendedWaitUntil:
    visible: "Editar Información Pública"
    timeout: 5000

- tapOn:
    index: 1
- eraseText
- inputText: "+591 71234567"
- hideKeyboard

- tapOn:
    index: 2
- eraseText
- inputText: "2.0.0"
- hideKeyboard

- tapOn: "Guardar Cambios"

- extendedWaitUntil:
    visible: "¡Actualizado!"
    timeout: 5000
- tapOn: "OK"

- tapOn:
    index: 0
- eraseText
- hideKeyboard

- tapOn: "Guardar Cambios"

- extendedWaitUntil:
    visible: "Error"
    timeout: 5000
- tapOn: "OK"

- tapOn:
    index: 0
- inputText: "admin@soporte.com"
- hideKeyboard

- scrollUntilVisible:
    element: "Cerrar Sesión"
    direction: DOWN

- tapOn: "Cerrar Sesión"

- extendedWaitUntil:
    visible: "Iniciar Sesión"
    timeout: 5000
